Fixed image spacing issues

--- a/style.css
+++ b/style.css
@@ -60,22 +60,27 @@ ul{
     display: flex;
     padding-top: 1em;
 }
-.servicesSection img{
-   
-}
 .servicesSectionLeftSide{
-    width: 40%;
-    padding-left: 4.5em;
+    width: 50%;
+    padding-left: 4em;
 
 }
 .servicesSectionRightSide{
     display: grid;
-    width: 20%;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 520px;
+    width: 40%;
     padding: 0;
     margin:0;
   }
-  
+.first .second .third img{
+    height:100%;
+    width:100%;
+    object-fit: cover;
+    border: 1px red solid;
+    align-self: end;
+}
   .first {
     grid-column: 1 / 2;
     grid-row: 1 / span 2;
@@ -84,11 +89,13 @@ ul{
   .second {
     grid-column: 2 / 2;
     grid-row: 1 / 2;
+    max-height: 265px;
   }
   
   .third {
     grid-column: 2 / 2;
     grid-row: 2 / 2;
+    max-height: 265px;
   }
   
 .testimonialSection{
@@ -101,10 +108,11 @@ ul{
     font-size: 2em;
 }
 .testimonialImgs{
-    display: flex;
-    gap: 15px;
+    display: inline-block;
 }
-
+.testimonialImgs img{
+    padding: 15px;
+}
 button{
     height: 53px;
     width: 315px;
